--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,9 @@
 <body>
 <button class="bs-layer-open">打开，使用类名bs-layer-open</button>
 <div class='bs-layer'>
-    <div class="bs-layer-title">这里是title <span class="bs-layer-icon-close">×</span></div>
+    <div class="bs-layer-header">
+        <div class="bs-layer-title">这里是title </div> <span class="bs-layer-icon-close">×</span>
+    </div>
     <div class="bs-layer-content">
         这里面试bs-layer-content
         <button class="bs-layer-close">关闭，使用类名bs-layer-close</button></div>
